# MSCL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  cliff.toml  pyproject.toml
.github/actions/setup-vcpkg-linux/: action.yml
.github/actions/setup-vcpkg-windows/: action.yml
.github/workflows/: cd.yml  ci-cpp-linux.yml  ci-cpp-windows.yml  main.yml  msvc-2022-x64.yml
bindings/: README.md
bindings/cmake/: mscl_swig_utilities.cmake
bindings/csharp/: CMakeLists.txt
bindings/csharp/managed/: CMakeLists.txt
bindings/python/: CMakeLists.txt  README.md
bindings/python/cmake/: mscl_swig_python_utilities.cmake
cmake/: microstrain-package-all.cmake  microstrain-utilities.cmake
cmake/presets/: README.md  all-presets.json  build.json  configure.json  debug-package.json  package.json  release-package.json  test.json
cmake/presets/linux/: linux-build.json  linux-configure.json  linux-package.json  linux-test.json  linux.json
cmake/presets/linux/unix/: unix-configure.json  unix-debug-configure.json  unix-debug-package.json  unix-package.json  unix-release-configure.json  unix-release-package.json  unix.json
cmake/presets/windows/: windows-build.json  windows-configure.json  windows-debug-package.json  windows-package.json  windows-release-package.json  windows-test.json  windows.json
cmake/presets/windows/msvc/: msvc-build.json  msvc.json  (+5 more)
docs/: CMakeLists.txt
docs/cmake/: mscl_docs_utilities.cmake
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/csharp/: CMakeLists.txt
examples/python/: CMakeLists.txt  README.md
guides/: Build.md  Integration.md
scripts/: pack-nuget.ps1  release.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
(+64 files in other folders)
